
28/12/2006	frmb	some work on PORTs and various other minor updates
27/12/2006	frmb	updates to option handling
02/08/2006	frmb	split some of the MCSP code into separate front-end files
01/08/2006	frmb	fixed some bugs in the handling of channel direction specifiers and parallel usage checker
28/08/2006	frmb	more work on occam-pi ALTs
27/08/2006	frmb	various updates to multiway synchronisation handling
20/08/2006	frmb	separated out new multiway synchronisation code into mysync.c
27/07/2006	frmb	more MCSP work, start on occam-pi multi-way synchronisations
06/04/2006	frmb	fixed a slight bug in the parser
06/04/2006	frmb	did some more work on the RCX-BASIC code
22/03/2006	frmb	minor fiddling around
30/01/2006	frmb	made the front-end and back-end passes generic
22/01/2006	frmb	more MCSP stuffs, now producing fairly stable code
09/01/2006	frmb	various updates for MCSP, added lang-specific fetrans hook, more instructions
06/01/2006	frmb	some work on the MCSP parser (very experimental)
05/01/2006	frmb	some initial support for ALTs
04/01/2006	frmb	support for verifying signatures on generated code
04/01/2006	frmb	some support for dynamic mobile arrays
03/01/2006	frmb	cryptographic support for hashing and signing code-gen output
01/01/2006	frmb	various namespace additions, more constant propagation
01/01/2006	frmb	released development version 0.1.3
31/12/2005	frmb	more FUNCTION handling, some support for SIZE operator, parser fixups
29/12/2005	frmb	various extra bits for FUNCTION handling (in progress)
11/12/2005	frmb	more support for MOBILE types
10/12/2005	frmb	moved initialiser code for CHANs out of occampi_decl into occampi_type
28/10/2005	frmb	a little more work on PAR replicator mapping (needs more back-end support)
24/10/2005	frmb	some work on the constant propagator (incomplete)
20/10/2005	frmb	some more work on replicators, map should be mostly ok
18/10/2005	frmb	fixed up some typecheck issues, initial array type-checking